# PyJibe

./: .appveyor.yml  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG  MANIFEST.in  README.rst  appveyor.yml  pyproject.toml  setup.py
.appveyor/: PyJibe.py  hook-h5py.py  hook-pyjibe.py  hook-sklearn.py  make_iss.py  pyjibe.iss_dummy  pyjibe.spec
.github/workflows/: check.yml  deploy_github.yml  deploy_github_signed_windows.yml  deploy_pypi.yml
.travis/: PyJibeApp.py  hook-pyjibe.py  hook-shapeout2.py  hook-sklearn.py  linux_build_app.sh  linux_setup_python.sh  osx_build_app.sh  osx_setup_python.sh
build-recipes/: PyJibe.icns  hook-pyjibe.py  hook-sklearn.py  macos_PyJibe.spec  macos_build_app.sh  macos_build_requirements.txt  win_PyJibe.spec  win_build_requirements.txt  win_make_iss.py  win_pyjibe.iss_dummy  win_pyjibe.spec
docs/: README.md  conf.py  index.rst  pyjibe.bib  requirements.txt  sec_changelog.rst  sec_code_signing.rst  sec_getting_started.rst  sec_interface.rst  sec_qg_extensions.rst  sec_qg_import_ts.rst  sec_quick_guides.rst  sec_tutorials.rst  sec_z_bib.rst
docs/data/: model_external_basic.py
docs/extensions/: rtd_pdf.py
docs/scrots/: .gitignore  make_scrots.sh  make_scrots_ui_fd.py  (+2 more)
pyjibe/: __main__.py  _version.py  colormap.py  extensions.py  registry.py  settings.py  units.py  util.py
tests/: conftest.py  helpers.py  requirements.txt  test_fd_autosave_override.py  test_fd_base.py  test_fd_fit.py  test_fd_fit_model_expr.py  test_fd_qmap.py  test_fd_rater.py  test_fd_tab_info.py  test_head.py  test_head_update.py  test_settings.py
(+53 files in other folders)
